--- a/Datenschutzordnung/Datenschutzrichtlinie.tex
+++ b/Datenschutzordnung/Datenschutzrichtlinie.tex
@@ -92,7 +92,7 @@ Weitere Anweisungen (z. B. in Zusammenhang mit besonderen Projekten oder im Auft
   \item Durch das Datenschutzrecht wird der Umgang mit „personenbezogenen Daten“ geschützt.\\
   \\
   Unter \textbf{personenbezogenen Daten} sind sämtliche Daten und Informationen zu verstehen, die zu einer identifizierbaren natürlichen Person (z. B. Mitglied, Kund*in, Mitarbeiter*in, Ansprechpartner*inn) in Verbindung gebracht werden können. Die wesentlichen Vorschriften ergeben sich aus der EU Datenschutz-Grundverordnung (DSGVO).
-  \item Aufgrund der gesetzlichen Vorgaben hat die GI angemessene technische und organisatorische Maßnahmen zum Schutz der personenbezogenen Daten eingerichtet. Im Rahmen der ihr zugewiesenen Aufgaben haben alle Mitarbeitenden die vorgegebenen organisatorischen Maßnahmen einzuhalten und die implementierten technischen Maßnahmen anzuwenden.
+  \item Aufgrund der gesetzlichen Vorgaben hat der de-RSE e.V. angemessene technische und organisatorische Maßnahmen zum Schutz der personenbezogenen Daten eingerichtet. Im Rahmen der ihr zugewiesenen Aufgaben haben alle Mitarbeitenden die vorgegebenen organisatorischen Maßnahmen einzuhalten und die implementierten technischen Maßnahmen anzuwenden.
   \item Alle Mitarbeitenden sind verpflichtet, personenbezogene Daten nur in dem Umfang und in der Weise zu verarbeiten und zu nutzen, wie es
   \begin{itemize}
     \item zur Erfüllung der ihr/ihm übertragenen Aufgaben und Funktionen erforderlich ist,
@@ -123,11 +123,11 @@ Weitere Anweisungen (z. B. in Zusammenhang mit besonderen Projekten oder im Auft
 \section{Regelung zu PC, Passwort, Bildschirmsperre, Datenspeicherung, Laptop,
 Mobiltelefon, Fax, freie Textfelder}
 \begin{itemize}
-  \item \textbf{Sperre des PC auch bei kurzfristigem Verlassen des Arbeitsplatzes}\\ Auch bei kurzzeitigem Verlassen des Arbeitsplatzes ist der Bildschirm auf die Anmeldungsmaske zu stellen bzw. der PC durch Aktivierung des passwortgeschützten Bildschirmschoners zu sperren (Strg+Alt+Entf oder WIN+L), wenn kein Sichtkontakt mehr zu dem Arbeitsplatz besteht. In jedem Falle ist sicherzustellen, dass niemand, auch kein andere Person, mit dem DV-Gerät unter der Benutzerkennung der abwesenden angestellten Person arbeiten kann. Bedenken Sie, dass aus den Protokolldaten Ihre Identität hervorgeht und jegliche Aktivität – auch unzulässige – durch Dritte Ihnen persönlich zugeschrieben werden muss. Das Ausforschen, Ausprobieren und die Benutzung fremder Zugriffsberechtigungen ist unzulässig.
+  \item \textbf{Sperre des PC auch bei kurzfristigem Verlassen des Arbeitsplatzes}\\ Auch bei kurzzeitigem Verlassen des Arbeitsplatzes ist der Bildschirm auf die Anmeldungsmaske zu stellen bzw. der PC durch Aktivierung des passwortgeschützten Bildschirmschoners zu sperren (Strg+Alt+Entf oder WIN+L), wenn kein Sichtkontakt mehr zu dem Arbeitsplatz besteht. In jedem Falle ist sicherzustellen, dass niemand, auch kein andere Person, mit dem DV-Gerät unter der Benutzerkennung der abwesenden beschäftigten Person arbeiten kann. Bedenken Sie, dass aus den Protokolldaten Ihre Identität hervorgeht und jegliche Aktivität – auch unzulässige – durch Dritte Ihnen persönlich zugeschrieben werden muss. Das Ausforschen, Ausprobieren und die Benutzung fremder Zugriffsberechtigungen ist unzulässig.
   \item \textbf{Umgang mit Passwörtern} \\ Ihr Passwort ist unbedingt geheim zu halten. Es ist verboten, Passwörter in der Nähe des Arbeitsplatzes oder auf dem PC selbst ungesichert abzulegen. Verwenden Sie Passwörter, die nicht einfach zu erraten sind; also keine Namen oder sonstigen Begriffe, die im Wörterbuch zu finden sind. Dies erreichen Sie auch durch Verfremdung Ihres alphabetischen Passworts und durch die Einfügung von Zahlen und Sonderzeichen.
   Die Geheimhaltungsverpflichtung gilt auch gegenüber Kolleg*innen und Vorgesetzten. Sollte ein Passwort ausnahmsweise weitergegeben werden müssen, ist es anschließend sofort zu ändern. Das gilt auch, falls Sie den Verdacht haben, dass Dritte Kenntnis von Ihrem Passwort erlangt haben.
   \item \textbf{Nutzung von Hard- und Software} \\ Es ist nur der Geschäftsführung bzw. dem Vorstand zur Nutzung freigegebene Software anzuwenden. Die Installation fremder Software (Spiele, Demoversionen, Shareware u.a.) ist zu unterlassen.
-  Nicht ordnungsgemäß erworbene Versionen von Software können einen Verstoß gegen das Urheberrecht bedeuten und sowohl den de-RSE e.V. als auch die angestellte Person, die die Software zum Einsatz bringt, in straf- und zivilrechtliche Haftung bringen. Darüber hinaus besteht eine wachsende Gefahr, durch Verwendung illegaler Softwarekopien unbemerkt Schadsoftware auf betriebliche Geräte oder das gesamte Netzwerk zu laden. Ferner ist es untersagt, Programme zu deinstallieren oder installierte Antivirus-Programme usw. zu deaktivieren.
+  Nicht ordnungsgemäß erworbene Versionen von Software können einen Verstoß gegen das Urheberrecht bedeuten und sowohl den de-RSE e.V. als auch die beschäftigte Person, die die Software zum Einsatz bringt, in straf- und zivilrechtliche Haftung bringen. Darüber hinaus besteht eine wachsende Gefahr, durch Verwendung illegaler Softwarekopien unbemerkt Schadsoftware auf betriebliche Geräte oder das gesamte Netzwerk zu laden. Ferner ist es untersagt, Programme zu deinstallieren oder installierte Antivirus-Programme usw. zu deaktivieren.
   \item \textbf{Datenspeicherung} \\ Sofern Daten gespeichert werden sollen/müssen, sind vorzugsweise die dafür vorgesehenen Serverlaufwerke zu nutzen (nur hier erfolgt eine regelmäßige Datensicherung). Lokale Laufwerke dürfen nicht für zu speichernde Arbeitsergebnisse genutzt werden, weil hierüber keine Datensicherung erfolgt. Bei Laptops sind mit dem nächsten Verbinden im Netzwerk gespeicherte Daten auf das Serverlaufwerk zu übertragen. \\
   Bei der Ablage von Dateien ist darauf zu achten, dass nur Berechtigten der Zugriff ermöglicht wird. \\
   Die Speicherung von Firmendaten auf privaten IT-Systemen oder privaten Speichermedien ist nicht gestattet.
@@ -172,12 +172,12 @@ Mobiltelefon, Fax, freie Textfelder}
   \item \textbf{Vertretung bei Abwesenheit}
   \begin{itemize}
     \item Mitarbeitende sowie Vorgesetzte haben sicherzustellen, dass im Falle der geplanten und ungeplanten Abwesenheit eine Vertretung die anfallenden Tätigkeiten übernehmen kann. Dazu muss unter anderem sichergestellt werden, dass im Falle der Abwesenheit ein Zugriff auch auf die relevanten elektronischen Vereinssdaten erfolgen kann.
-    \item Dazu ist ein lesender Zugriff auf das E-Mail-Postfach durch Anpassen der Zugriffsberechtigungen des E-Mail-Programms für eine Vertretung einzurichten. Der Zugriff der Vertretung kann von der angestellten Person dauerhaft oder für die Dauer einer Abwesenheit eingestellt werden. Die Entscheidung über die temporäre oder permanente Vertretungsregelung trifft die angestellte Person.
+    \item Dazu ist ein lesender Zugriff auf das E-Mail-Postfach durch Anpassen der Zugriffsberechtigungen des E-Mail-Programms für eine Vertretung einzurichten. Der Zugriff der Vertretung kann von der beschäftigten Person dauerhaft oder für die Dauer einer Abwesenheit eingestellt werden. Die Entscheidung über die temporäre oder permanente Vertretungsregelung trifft die beschäftigte Person.
     \item Es ist untersagt, der Vertretung das eigene Passwort mitzuteilen, da dies die Nachweisbarkeit und Zuordnung einer Aktion zu einer Person unmöglich machen würde.
   \end{itemize}
   \item \textbf{Zugriff im Ausnahmefall}
   \begin{itemize}
-    \item Sofern die angestellte Person, die zur Einrichtung einer Vertretungsregelung verpflichtet ist, die Aktivierung der Regelung im Vorfeld einer Abwesenheit vergisst oder aufgrund ungeplanter Abwesenheit daran gehindert ist, kann die Geschäftsleitung bzw. der Vorstand veranlassen, dass der Vertretungszugriff aktiviert wird. Gleiches gilt für den Fall, dass aus welchen Gründen auch immer, eine Vertretung anweisungswidrig nicht eingerichtet sein sollte oder die eingerichtete Vertretung selbst abwesend ist.
+    \item Sofern die beschäftigte Person, die zur Einrichtung einer Vertretungsregelung verpflichtet ist, die Aktivierung der Regelung im Vorfeld einer Abwesenheit vergisst oder aufgrund ungeplanter Abwesenheit daran gehindert ist, kann die Geschäftsleitung bzw. der Vorstand veranlassen, dass der Vertretungszugriff aktiviert wird. Gleiches gilt für den Fall, dass aus welchen Gründen auch immer, eine Vertretung anweisungswidrig nicht eingerichtet sein sollte oder die eingerichtete Vertretung selbst abwesend ist.
     \item Besteht daher kein Zugriff auf wesentliche, betriebliche Informationen kann bei dringend benötigtem Zugriff einer von der zuständigen Geschäftsleitung bzw. dem Vorstand genannten Person der Vertretungszugriff zeitweise ermöglicht werden.
     \item Sämtliche Personen, die im Rahmen der Vertreterregelung Zugriff auf E-Mails oder Daten der/des Vertretenen haben, sind verpflichtet, persönliche/private Kommunikation der/des Vertretenen nicht zu lesen und nicht zur Kenntnis zu nehmen, sobald die Informationen als private Daten erkannt werden.
   \end{itemize}
