--- a/Datenschutzordnung/Datenschutzrichtlinie.tex
+++ b/Datenschutzordnung/Datenschutzrichtlinie.tex
@@ -56,7 +56,7 @@
 \thispagestyle{headings}
 \vspace{-8.5cm}
 \begin{centering}
-{\large\textbf{Datenschutzrichtlinie für Mitarbeiterinnen und Mitarbeiter der Gesellschaft für Forschungssoftware (de-RSE e.V.)}}\\
+{\large\textbf{Datenschutzrichtlinie für Beschäftigte der Gesellschaft für Forschungssoftware (de-RSE e.V.)}}\\
 {\tiny c/o Deutsches Zentrum für Luft- und Raumfahrt (DLR), Institut für Softwaretechnologie, Rutherfordstraße 2, 12489 Berlin}\\*[1em]
 \end{centering}
 \vspace{0.5cm}
